2022-05-27 Se agregan catálogos para Matriz de RH.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -291,7 +291,12 @@
     <Compile Include="Controllers\inspeccionCategoriaFallasController.cs" />
     <Compile Include="Controllers\InspeccionRegistrosController.cs" />
     <Compile Include="Controllers\inspeccion_fallasController.cs" />
+    <Compile Include="Controllers\IT_carpetas_redController.cs" />
+    <Compile Include="Controllers\IT_comunicaciones_tipoController.cs" />
+    <Compile Include="Controllers\IT_hardware_tipoController.cs" />
+    <Compile Include="Controllers\IT_internet_tipoController.cs" />
     <Compile Include="Controllers\IT_matriz_requerimientosController.cs" />
+    <Compile Include="Controllers\IT_software_tipoController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\mm_v3Controller.cs" />
     <Compile Include="Controllers\OrdenesTrabajoController.cs" />
@@ -483,12 +488,17 @@
     <Compile Include="Models\MetadataModels\budget_mappingMetadata.cs" />
     <Compile Include="Models\MetadataModels\budget_mapping_bridge_Metadata.cs" />
     <Compile Include="Models\MetadataModels\budget_plantasMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_internet_tipoMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_software_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\class_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\currencyMetadata.cs" />
     <Compile Include="Models\MetadataModels\empleadosMetadata.cs" />
     <Compile Include="Models\MetadataModels\inspeccion_categoria_fallasMetadata.cs" />
     <Compile Include="Models\MetadataModels\inspeccion_datos_generalesMetadata.cs" />
     <Compile Include="Models\MetadataModels\inspeccion_fallasMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_carpetas_redMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_comunicaciones_tipoMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_hardware_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_Matriz_requerimientosMetadata.cs" />
     <Compile Include="Models\MetadataModels\mm_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\orden_trabajoMetadata.cs" />
@@ -6962,6 +6972,36 @@
     <Content Include="Views\OT_responsables\Create.cshtml" />
     <Content Include="Views\OT_responsables\Delete.cshtml" />
     <Content Include="Views\OT_responsables\Index.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Create.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Details.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Disable.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Edit.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Enable.cshtml" />
+    <Content Include="Views\IT_carpetas_red\Index.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Details.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Create.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Disable.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Edit.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Enable.cshtml" />
+    <Content Include="Views\IT_comunicaciones_tipo\Index.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Index.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Enable.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Edit.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Disable.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Details.cshtml" />
+    <Content Include="Views\IT_hardware_tipo\Create.cshtml" />
+    <Content Include="Views\IT_software_tipo\Create.cshtml" />
+    <Content Include="Views\IT_software_tipo\Details.cshtml" />
+    <Content Include="Views\IT_software_tipo\Disable.cshtml" />
+    <Content Include="Views\IT_software_tipo\Edit.cshtml" />
+    <Content Include="Views\IT_software_tipo\Enable.cshtml" />
+    <Content Include="Views\IT_software_tipo\Index.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Create.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Details.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Disable.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Edit.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Enable.cshtml" />
+    <Content Include="Views\IT_internet_tipo\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
