2022-06-09 Se agrega primera versión de catálogos de software.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -296,6 +296,7 @@
     <Compile Include="Controllers\IT_comunicaciones_tipoController.cs" />
     <Compile Include="Controllers\IT_hardware_tipoController.cs" />
     <Compile Include="Controllers\IT_internet_tipoController.cs" />
+    <Compile Include="Controllers\IT_inventory_itemsController.cs" />
     <Compile Include="Controllers\IT_matriz_requerimientosController.cs" />
     <Compile Include="Controllers\IT_software_tipoController.cs" />
     <Compile Include="Controllers\IT_solicitud_usuariosController.cs" />
@@ -384,6 +385,15 @@
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\budget_departamentos.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_inventory_hardware_type.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_inventory_hard_drives.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_inventory_items.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IT_solicitud_usuarios.cs">
@@ -495,6 +505,7 @@
     <Compile Include="Models\MetadataModels\budget_mapping_bridge_Metadata.cs" />
     <Compile Include="Models\MetadataModels\budget_plantasMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_internet_tipoMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_inventory_itemsMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_software_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\class_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\currencyMetadata.cs" />
@@ -7026,6 +7037,50 @@
     <Content Include="Views\notificaciones_correo\Details.cshtml" />
     <Content Include="Views\notificaciones_correo\Edit.cshtml" />
     <Content Include="Views\notificaciones_correo\Index.cshtml" />
+    <Content Include="Views\IT_inventory_items\desktop.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateDesktop.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsDesktop.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditDesktop.cshtml" />
+    <Content Include="Views\IT_inventory_items\laptop.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateLaptop.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsLaptop.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditLaptop.cshtml" />
+    <Content Include="Views\IT_inventory_items\monitor.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditMonitor.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsMonitor.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateMonitor.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreatePrinter.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsPrinter.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditPrinter.cshtml" />
+    <Content Include="Views\IT_inventory_items\printer.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateLabel_printer.cshtml" />
+    <Content Include="Views\IT_inventory_items\label_printer.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsLabel_printer.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditLabel_printer.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreatePDA.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsPDA.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditPDA.cshtml" />
+    <Content Include="Views\IT_inventory_items\PDA.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateServer.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsServer.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditServer.cshtml" />
+    <Content Include="Views\IT_inventory_items\server.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateTablet.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsTablet.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditTablet.cshtml" />
+    <Content Include="Views\IT_inventory_items\tablet.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateRadio.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsRadio.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditRadio.cshtml" />
+    <Content Include="Views\IT_inventory_items\Radio.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateAP.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsAP.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditAP.cshtml" />
+    <Content Include="Views\IT_inventory_items\AP.cshtml" />
+    <Content Include="Views\IT_inventory_items\CreateSmartphone.cshtml" />
+    <Content Include="Views\IT_inventory_items\DetailsSmartphone.cshtml" />
+    <Content Include="Views\IT_inventory_items\EditSmartphone.cshtml" />
+    <Content Include="Views\IT_inventory_items\smartphone.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
