2022-06-14 Se sube catálogo de planes de telefonía.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -296,6 +296,7 @@
     <Compile Include="Controllers\IT_comunicaciones_tipoController.cs" />
     <Compile Include="Controllers\IT_hardware_tipoController.cs" />
     <Compile Include="Controllers\IT_internet_tipoController.cs" />
+    <Compile Include="Controllers\IT_inventory_cellular_plansController.cs" />
     <Compile Include="Controllers\IT_inventory_itemsController.cs" />
     <Compile Include="Controllers\IT_inventory_softwareController.cs" />
     <Compile Include="Controllers\IT_matriz_requerimientosController.cs" />
@@ -338,6 +339,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\OwnHelpers.cs" />
     <Compile Include="Migrations\202109072018357_MigracionInicial.cs" />
     <Compile Include="Migrations\202109072018357_MigracionInicial.Designer.cs">
       <DependentUpon>202109072018357_MigracionInicial.cs</DependentUpon>
@@ -386,6 +388,9 @@
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\budget_departamentos.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_inventory_cellular_plans.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IT_inventory_hardware_type.cs">
@@ -514,6 +519,7 @@
     <Compile Include="Models\MetadataModels\IT_internet_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_inventory_itemsMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_inventory_softwareMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_inventory_cellular_plansMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_software_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\class_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\currencyMetadata.cs" />
@@ -7090,10 +7096,15 @@
     <Content Include="Views\IT_inventory_items\EditSmartphone.cshtml" />
     <Content Include="Views\IT_inventory_items\smartphone.cshtml" />
     <Content Include="Views\IT_inventory_software\Create.cshtml" />
-    <Content Include="Views\IT_inventory_software\Delete.cshtml" />
     <Content Include="Views\IT_inventory_software\Details.cshtml" />
     <Content Include="Views\IT_inventory_software\Edit.cshtml" />
     <Content Include="Views\IT_inventory_software\Index.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Create.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Details.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Edit.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Index.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Disable.cshtml" />
+    <Content Include="Views\IT_inventory_cellular_plans\Enable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
